--- a/index.html
+++ b/index.html
@@ -17,31 +17,30 @@
     <nav>
         <section>
             <div>
-                <p>Cantidad de cuartos:</p> <input min="0" class="form-control w-50 m-auto" type="number">
+                <p>Cantidad de cuartos:</p> <input min="0" class="form-control w-50 m-auto" type="number" required>
             </div>
             <div>
                 <span>Metros cuadrados </span>
                 <div class="d-flex">
                     <div class="me-4">
-                        <p>desde: </p><input min="0" class="form-control " type="number">
+                        <p>desde: </p><input min="0" class="form-control " type="number" required>
                     </div>
                     <div>
                         <p> hasta:</p>
-                        <input min="0" class="form-control " type="number">
+                        <input min="0" class="form-control " type="number" required>
                     </div>
                 </div>
             </div>
         </section>
-        <button class="btn btn-warning" onclick="filter()">Buscar</button>
+        <button class="btn btn-warning">Buscar</button>
     </nav>
     <!-- END SEARCH FIELD-->
 
-    <div class="container">
-        <input type="text" placeholder="search" class="filter-output">
+    <section id="Propiedades">
         <h4 class="py-3">Total: <span>0</span></h4>
 
-        <div class="output"></div>
-    </div>
+        <div class="propiedades"></div>
+    </section>
 
     <script src="assets/js/index.js"></script>
 </body>
