--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
 </head>
 
 <body>
-    <!-- SEARCH FIELD-->
     <nav>
         <section>
             <div>
-                <p>Cantidad de cuartos:</p> <input id="roomsQ" min="0" class="form-control w-50 m-auto" type="number"
-                    required>
+                <p>Cantidad de cuartos:</p>
+                <input id="cuartos" min="0" class="form-control w-50 m-auto" type="number" />
             </div>
             <div>
                 <span>Metros cuadrados </span>
                 <div class="d-flex">
                     <div class="me-4">
-                        <p>desde: </p><input id="minSq" min="0" class="form-control " type="number" required>
+                        <p>desde:</p>
+                        <input id="valorMin" min="0" class="form-control" type="number" />
                     </div>
                     <div>
-                        <p> hasta:</p>
-                        <input id="maxSq" min="0" class="form-control " type="number" required>
+                        <p>hasta:</p>
+                        <input id="valorMax" min="0" class="form-control" type="number" />
                     </div>
                 </div>
             </div>
         </section>
+
         <button class="btn btn-warning">Buscar</button>
     </nav>
-    <!-- END SEARCH FIELD-->
 
-    <section>
-        <h4 class="py-3">Total: <span id="totalProperties">0</span></h4>
+    <section id="Propiedades">
+        <h4 class="py-3">Total: <span>0</span></h4>
 
         <div class="propiedades"></div>
     </section>
@@ -47,31 +47,3 @@
 </body>
 
 </html>
-
-
-<!-- 
-        <section id="Propiedades">
-        <h4 class="py-3">Total: <span>0</span></h4>
-        <div class="propiedades">
-            <div class="propiedad">
-                <div class="img"
-                    style="background-image: url('https://resizer.glanacion.com/resizer/fhK-tSVag_8UGJjPMgWrspslPoU=/768x0/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/CUXVMXQE4JD5XIXX4X3PDZAVMY.jpg')">
-                </div>
-                <section>
-                    <h5>Mansión</h5>
-                    <div class="d-flex justify-content-between">
-                        <p>Cuartos: 2 </p>
-                        <p>Metros: 170 </p>
-                    </div>
-                    <p class="my-3">Mansión gigante</p>
-                    <button class="btn btn-info ">Ver más</button>
-                </section>
-            </div>
-        </div>
-    </section>
-
-
-
-            <h4 class="py-3">Total: <span>0</span></h4>
-
--->
