--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <button class="btn btn-warning">Buscar</button>
     </nav>
 
-    <section id="output1">
+    <section id="output">
         <h4 class="py-3">Total: <span>0</span></h4>
 
-        <div id="output"></div>
+        <div class="output2"></div>
     </section>
 
     <script src="assets/js/index.js"></script>
